--- a/style.css
+++ b/style.css
@@ -1,14 +1,7 @@
 body{
   background-color: beige;
 }
-
 H1{
   color: black;
-  Font size: ; 
-  font-family: ariel; 
-  
-      
-      
-        
-      }
+  font-family: ariel; }
  
